Blog fixes for responsive text overlap

--- a/themes/roots-nextdatagov/assets/css/rei.css
+++ b/themes/roots-nextdatagov/assets/css/rei.css
@@ -214,7 +214,7 @@
 
     background-color: #FFFFFF;
     /*  box-shadow: 0 2px 5px 1px #DADADA; */
-    height:200px;
+    /* height:200px;*/
     margin-top:-75px;
 
 
